[qjh] feat: 在后端拿到数据之后更新 header ，测试getUserBasicInformation方法(resolve 和 reject 两种情况)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,9 @@
   "env": {
     "es6": true,
     "browser": true,
-    "jest/globals": true
+    "jest/globals": true,
+    "node": true,
+    "jquery": true
   },
   "parser": "babel-eslint",
   "parserOptions": {
