--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
   "lint-staged": {
     "*.js": "eslint \"src/\" --cache --fix --format table",
     "*.{js,css,scss,html}": "prettier --write"
+  },
+  "dependencies": {
+    "axios": "^0.20.0"
   }
 }
